# svcs

./: .env.example  .gitignore  FINAL_CLEANUP_STATUS.md  LEGACY_CLEANUP_COMPLETE.md  NEW_EVENT_TYPES.md  README.md  README_old.md  SVCS_COLLABORATIVE_GUIDE.md  SVCS_LAYERS_AND_EVENTS_REFERENCE.md  SVCS_LEGACY_CLEANUP_FINAL_REPORT.md  TIME_CRYSTAL_ANALYSIS.md  WEB_API_TESTING.md  after.tmp  ai_agent_instructions.md  before.tmp  complex_algorithm.py  comprehensive_test.py  debug_confidence.py  demo_conversational_interface.py  demo_dashboard.py  demo_php_evolution.php  demo_php_support.py  demo_semantic_evolution.py  install.py  layer5_demo_before.py  migrate_database.py  project_setup.sh  requirements.txt  requirements_ai.txt  requirements_web.txt  run_targeted_tests.py  setup.py  setup.sh  start_dashboard.sh  svcs.py  svcs_analytics_report.json  svcs_cleanup.py  svcs_complete_5layer.py  svcs_dashboard.html  svcs_discuss.py  (+34 more)
.svcs/: analyzer.py  api.py  config.json  layer5_ai.py  llm_logger.py  svcs_complete_5layer.py  svcs_multilang.py
.svcs_legacy/: analyzer.py  api.py  history.db  llm_logger.py  main.py  main_complete.py  parser.py  semantic.db  storage.py
demos/: add_recent_test_data.py  analyze_repo_files.py  answer_collaboration_questions.py  collect_layer_events.py  create_semantic_test_data.py  demo_api_comparison.py  demo_api_complete.py  demo_comprehensive.py  demo_mcp_server.py  demo_new_project_setup.py  demo_php_support.py  demo_semantic_evolution.py  event_coverage_comparison.py  svcs_mcp_demo.py  (+3 more)
svcs_mcp/: README.md  cli_fixed.py  debug_database.py  demo.py  mcp_server.py  pyproject.toml  server.py  svcs_core.py  svcs_mcp_server.py  svcs_mcp_server_simple.py  svcs_mcp_server_simple_backup.py  svcs_repo_local_core.py  test_cli.py  test_event_queries.py  test_mcp_debug.py  test_mcp_query_tools.py  test_updated_mcp.py  working_mcp_server.py
svcs_mcp/svcs_mcp/: cli.py  git_hooks.py  integration.py  semantic_analyzer.py  server.py
svcs_mcp/svcs_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+358 files in other folders)
